projects/devops/applications/argocd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
  namespace: argocd
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    external-dns.alpha.kubernetes.io/hostname: argocd.oakdew.biz
    external-dns.alpha.kubernetes.io/target: 37ed5835-217b-467a-860c-630b6ff8f222.cfargotunnel.com
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.oakdew.biz
      secretName: argocd-cert
  rules:
    - host: argocd.oakdew.biz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
